Adicionado um hover nos links de termos de uso e privacidade

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -10,6 +10,11 @@
 
 }
 
+.emphasis_text:hover{
+    color: rgb(1, 178, 190);
+
+}
+
 #body{
     font-family: LeagueSpartan;
     text-align: justify;
