Base HTML para a página de edição de perfil.

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -1,5 +1,5 @@
 .column{
 
-    background-color: #09A7B1;
-    color: white;
+    background-color: #09A7B1 !important;
+    color: white !important;
 }
