Por algum motivo, a foto de perfil do usuário ficou com as bordas normais.

--- a/public/css/photos.css
+++ b/public/css/photos.css
@@ -1,4 +1,4 @@
-img{
+.div_img img{
 
     width:8cm;
     height: 8cm;
@@ -11,3 +11,10 @@ img{
     border-radius: 100%;
     border-color: rgb(2, 140, 150);
 }
+
+.profile_img{
+
+    height: 200px;
+    width: 200px;
+}
+
