--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -3,3 +3,11 @@
     background-color: #09A7B1 !important;
     color: white !important;
 }
+
+.photo_name{
+    color: #09A7B1
+}
+
+input{
+    background-color: #F5F5F5;
+}
