--- a/public/css/default.css
+++ b/public/css/default.css
@@ -18,4 +18,18 @@
 #body{
     font-family: LeagueSpartan;
     text-align: justify;
+    }
+
+input{
+    border-style: solid;
+    border-radius: 7px;
+    border-width: 0px;
+}
+
+.img_input{
+
+    border-style: solid;
+    border-width: 1px;
+    border-width: 0px;
+
 }
