Esqueci do campo de texto para descrição do serviço, mas beleza, já adicionei ele junto com os botões de desfazer da tela de edição de serviço. Além disso, comecei a fazer o backend do crud do serviço.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -33,3 +33,17 @@ input{
     border-width: 0px;
 
 }
+
+.big_input{
+
+    width: 600px;
+    height: 200px;
+    position: relative;
+}
+.big_input::placeholder{
+
+    position: absolute;
+    top: 10px;
+    left: 10px;
+
+}
