--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -3,4 +3,23 @@
     width: 150px;
     height: 50px;
     font-size: 25px;
+    background-color: #09A7B1
+}
+
+.button_undo{
+
+    width: 150px;
+    height: 50px;
+    font-size: 25px;
+    background-color: #A8A8A8;
+    color: #ffffff;
+}
+
+.button_delete{
+
+    width: 150px;
+    height: 50px;
+    font-size: 25px;
+    background-color: #DA0004;
+    color: #ffffff;
 }
