--- a/public/css/default.css
+++ b/public/css/default.css
@@ -47,3 +47,12 @@ input{
     left: 10px;
 
 }
+.inputs_desc::placeholder{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.inputs_desc{
+    overflow-y: auto;
+}
