--- a/public/css/sizes.css
+++ b/public/css/sizes.css
@@ -9,8 +9,15 @@
     height: 50px;
 }
 
+.inputs .inputs_desc{
+    height: 300px;
+    width: 600px;
+}
+
 .inputs_2 input{
 
     width: 300px;
     height: 50px;
 }
+
+
