--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,11 @@ h6 {
 .esqueci-senha {
     text-decoration: none;
     font-size: 0.9rem;
+    color: rgb(0, 0, 255);
+    text-decoration: underline; 
+}
+
+.esqueci-senha:hover {
     color: #333;
 }
 
