--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -3,9 +3,7 @@
     .inputs_2 input{
 
         margin-left: 48px;
-
     }
-
 }
 
 @media(max-width: 670px){
@@ -17,6 +15,9 @@
     .big_input input {
         width: 500px;
 
+    }
+    .inputs_desc{
+        width: 500px;
     }
 
 }
@@ -32,6 +33,9 @@
     .big_input input {
         width: 400px;
 
+    }
+    .inputs_desc {
+        width: 400px;
     }
 }
 
@@ -64,6 +68,9 @@
     .big_input input{
         width: 300px;
 
+    }
+    .inputs_desc {
+        width: 300px;
     }
 }
 
