--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,6 @@ html {
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
-    overflow: hidden;
     font-size: 16px;
 }
 
@@ -57,7 +56,7 @@ h6 {
 
 
 .bg-gradient {
-    background: linear-gradient(to bottom, #4879BF, #7FBFC9) !important;
+    background: linear-gradient(to bottom, #4879BF, #7FBFC9);
     padding: 30px;
 }
 
