--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -83,3 +83,32 @@ body {
     color: #003c4f;
     font-weight: bold;
 }
+
+.nav-icon a {
+    position: relative;
+    padding: 0;
+}
+
+.nav-icon a::before {
+    content: '';
+    position: absolute;
+    bottom: 15px;
+    left: 8px;
+    width: 0;
+    height: 3px;
+    background-color: #006e92;
+    transition: width 0.3s ease-in-out;
+}
+
+.nav-icon a:hover::before {
+    width: calc(100% - 15px);
+}
+
+.nav-icon a.active::before {
+    width: calc(100% - 15px);
+}
+
+.nav-icon a.active {
+    color: #003c4f;
+    font-weight: bold;
+}
