--- a/public/css/search-bar.css
+++ b/public/css/search-bar.css
@@ -1,31 +1,49 @@
+.search-bar-container {
+    width: 100%;
+    display: flex;
+    /* Adicionado */
+    flex-wrap: nowrap;
+}
 
-.search-bar-container .search-bar {
-    max-width: 100%;
+.search-bar {
     background-color: white;
     padding: 6px 8px;
     border-radius: 24px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    /* Garante que ocupa todo o espaço */
 }
 
-.search-bar-container .search-input {
+
+.search-bar input {
     border: none;
     outline: none;
     font-size: 16px;
     border-radius: 24px;
     padding-left: 16px;
+
+    flex-grow: 1;
+    min-width: 0;
 }
 
-.search-bar-container .search-button {
-    background:  #30e0e0;
+.search-bar button {
+    background: #30e0e0;
     color: white;
     border: none;
-    padding: 8px 16px;
+    padding: 8px;
     border-radius: 50%;
     cursor: pointer;
     width: 40px;
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     flex-shrink: 0;
 }
 
-.search-bar-container .search-button:hover {
+.search-bar button:hover {
     background: linear-gradient(135deg, #30e0e0, #006e92);
 }
