--- a/public/css/photos.css
+++ b/public/css/photos.css
@@ -102,3 +102,11 @@
   background-color: #494949;
   color: white;
 }
+
+.service_photo{
+
+  width: 413px;
+  height: 196px;
+  object-fit: cover;
+
+}
