--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,9 +394,11 @@ form {
 
 .btn-geral {
     background: #7DCCD8;
+    border: 1px solid #7DCCD8;
     transition: background 0.4s ease-in-out;
 }
 
 .btn-geral:hover {
     background: #1f96b7;
+    border: 1px solid #7DCCD8;
 }
