--- a/public/css/style.css
+++ b/public/css/style.css
@@ -407,3 +407,11 @@ form {
         margin-bottom: 0.5rem;
     }
 }
+.card-img-top.lazy {
+    opacity: 0;
+    transition: opacity 0.3s ease-in;
+}
+
+.card-img-top {
+    opacity: 1;
+}
